--- a/src/site/content/feeds/gradient-soap-motion.njk
+++ b/src/site/content/feeds/gradient-soap-motion.njk
@@ -1,25 +1,107 @@
 ---
 layout: 'layouts/base'
-title: Gradient Soap on Motion
+title: Sabun Warna Warni
 styleScripts:
     - /css/gradient-soap-motion.css
 tags:
+    - feeds
     - flex
     - intermediate
     - in-progress
 ---
 
 <div id="gradient-soap-page">
-    <div id="motion-bg">
+    <div id="gradient-inner">
         <div id="poster">
         {# <div id="circle-blue-light"> #}
         {# </div> #}
+        <div id="motion-bg">
         <div id="circle-blue-dark">
         </div>
         <div id="circle-blue-light">
         </div>
         <div id="circle-red">
         </div>
+        </div>
+            <div id="gradient-top">
+                <div id="gradient__nav-links">
+                    <a href="/gradient-soap-motion">Tickets</a>
+                    <a href="/gradient-soap-motion">Schedules</a>
+                    <a href="/gradient-soap-motion">Listings</a>
+                    <a href="/gradient-soap-motion">Rules</a>
+                </div>
+                <div id="gradient-sponsor">
+                    <p>Event by</p>
+                    <p>SOAPY PRODUCTION</p>
+                </div>
+            <div id="gradient-type">
+                <h2 id="gradient-layer__title">Warna Warni on Motion</h2>
+                <h3 id="gradient-layer__subtitle">First Gradient Soap on Festival</h2>
+                <h3 id="gradient-layer__place">KURVA Center Assembly</h3>
+                <h3 id="gradient-layer__date">24.11.23</h3>
+            </div>
+            <div id="gradient-guests" class="region">
+                <p>Featured Guests</p>
+                <div class="guest-lists">
+                <div class="guest__item">
+                    <p id="guest-vvip" class="guest-item__artist">Lavender</p>
+                    <p class="guest-item__pos">Main Stage</p>
+                </div>
+                <div class="guest__item">
+                    <p class="guest-item__artist">Bermuda</p>
+                    <p class="guest-item__pos">Party Stage</p>
+                </div>
+                <div class="guest__item">
+                    <p class="guest-item__artist">Tulip</p>
+                    <p class="guest-item__pos">Lounge Stage</p>
+                </div>
+                 <div class="guest__item">
+                    <p class="guest-item__artist">Rose</p>
+                    <p class="guest-item__pos">Lounge Stage</p>
+                </div>
+                </div>
+            </div>
+            <div id="gradient-baazar" class="region">
+                <p>Open Bazaar</p>
+                <div class="bazaar-lists">
+                <div class="bazaar__item">
+                    <p class="guest-item__artist">Sabun Colek.</p>
+                    <p class="guest-item__pos">Main Stage</p>
+                </div>
+                <div class="bazaar__item">
+                    <p class="guest-item__artist">Sabun Mandi.</p>
+                    <p class="guest-item__pos">Party Stage</p>
+                </div>
+                <div class="bazaar__item">
+                    <p class="guest-item__artist">Sabun Laundry.</p>
+                    <p class="guest-item__pos">Lounge Stage</p>
+                </div>
+                <div class="bazaar__item">
+                    <p class="guest-item__artist">Sabun Pel</p>
+                    <p class="guest-item__pos">Lounge Stage</p>
+                </div>
+                <div class="bazaar__item">
+                    <p class="guest-item__artist">Sabun Batang</p>
+                    <p class="guest-item__pos">Lounge Stage</p>
+                </div>
+                <div class="bazaar__item">
+                    <p class="guest-item__artist">Sabun Mobil</p>
+                    <p class="guest-item__pos">Lounge Stage</p>
+                </div>
+                </div>
+            </div>
+            <div id="gradient-submit">
+                <a href="/gradient-soap-motion">
+                    <h2>GET YOUR TICKET</h2>
+                </a>
+            </div>
+            <div id="gradient-schedule">
+                <h3>Opening Gate</h3>
+                <h3>13.00</h3>
+                <h3>Please Exchange The Ticket for Access ID</h3>
+                <h3>In Booth</h3>
+            </div>
+            </div>
         </div>
     </div>
 </div>
