--- a/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
+++ b/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
@@ -18,6 +18,7 @@ tags:
             <h2 id="sentimen__question">Apa yang merindukanmu di pagi hari?</h2>
             <h1 id="sentimen__quote">Merindukan sentimen di samping kamu</h1>
             <p id="sentimen__sponsor">Kata kata ini disponsori oleh KICIKKU</p>
+            <p>木シック</p>
             </div>
         </div>
     </div>
