--- a/src/site/content/feeds/gradient-soap-motion.njk
+++ b/src/site/content/feeds/gradient-soap-motion.njk
@@ -35,29 +35,50 @@ tags:
                     <p>SOAPY PRODUCTION</p>
                 </div>
             <div id="gradient-type">
-                <h2 id="gradient-layer__title">Warna Warni on Motion</h2>
-                <h3 id="gradient-layer__subtitle">First Gradient Soap on Festival</h2>
+                <h2 id="gradient-layer__title">'Warna Warni dalam Emosi'</h2>
+                <h3 id="gradient-layer__subtitle">First Homemade Soap Festival</h2>
                 <h3 id="gradient-layer__place">KURVA Center Assembly</h3>
                 <h3 id="gradient-layer__date">24.11.23</h3>
             </div>
             <div id="gradient-guests" class="region">
-                <p>Featured Guests</p>
+                <p>Guests Listing</p>
+                <div class="grouped-lists">
                 <div class="guest-lists">
                 <div class="guest__item">
+                    <P>OUR GUEST STAR<p>
                     <p id="guest-vvip" class="guest-item__artist">Lavender</p>
-                    <p class="guest-item__pos">Main Stage</p>
+                    <p class="guest-item__pos">Saturday, 20.00 - 22.00</p>
                 </div>
                 <div class="guest__item">
                     <p class="guest-item__artist">Bermuda</p>
-                    <p class="guest-item__pos">Party Stage</p>
+                    <p class="guest-item__pos">Friday, 20.00 - 22.00</p>
                 </div>
                 <div class="guest__item">
                     <p class="guest-item__artist">Tulip</p>
-                    <p class="guest-item__pos">Lounge Stage</p>
+                    <p class="guest-item__pos">Saturday, 20.00 - 22.00</p>
                 </div>
                  <div class="guest__item">
                     <p class="guest-item__artist">Rose</p>
                     <p class="guest-item__pos">Lounge Stage</p>
+                </div>
+                </div>
+                <div class="guest-lists">
+                <div class="guest__item">
+                    <p id="guest-vvip" class="guest-item__artist">Lemon</p>
+                    <p class="guest-item__pos">Friday, 16.00 - 17.00</p>
+                </div>
+                <div class="guest__item">
+                    <p class="guest-item__artist">Hawaii</p>
+                    <p class="guest-item__pos">Saturday, 16.00 - 17.00</p>
+                </div>
+                <div class="guest__item">
+                    <p class="guest-item__artist">Swiss</p>
+                    <p class="guest-item__pos">Thursday, 16.00 - 17.00</p>
+                </div>
+                 <div class="guest__item">
+                    <p class="guest-item__artist">Coffee</p>
+                    <p class="guest-item__pos">Wednesday, 16.00 - 17.00</p>
+                </div>
                 </div>
                 </div>
             </div>
@@ -98,8 +119,13 @@ tags:
             <div id="gradient-schedule">
                 <h3>Opening Gate</h3>
                 <h3>13.00</h3>
+                <div id="notice-schedule">
                 <h3>Please Exchange The Ticket for Access ID</h3>
                 <h3>In Booth</h3>
+                </div>
+            </div>
+            <div id="event-sample-mark" class="region">
+                <p>THIS DIGITAL EVENT POSTER IS JUST A SAMPLE WEB PAGE DIGITAL EXPERIENCE BY KURVA AND KICIKKU. PLEASE DONT INTEND TO DO A TRANSACTION.</p>
             </div>
             </div>
         </div>
