Changed to mono system

--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -6,8 +6,9 @@
         border-radius: 1em;
     }
 
-    h1, h2 {
+    h1, h2, h3 {
         font-weight: 400;
+        font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace; 
     }
 }
 
