--- a/src/scss/blocks/_site-footer.scss
+++ b/src/scss/blocks/_site-footer.scss
@@ -41,5 +41,6 @@
 }
 
 .w-footer {
-
+    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+    font-size: 14px;
 }
