--- a/src/site/content/feeds/gradient-soap-motion.njk
+++ b/src/site/content/feeds/gradient-soap-motion.njk
@@ -1,6 +1,6 @@
 ---
 layout: 'layouts/base'
-title: Sabun Warna Warni
+title: 'Warna Warni dalam Emosi' Festival Poster
 styleScripts:
     - /css/gradient-soap-motion.css
 tags:
@@ -37,13 +37,16 @@ tags:
             <div id="gradient-type">
                 <h2 id="gradient-layer__title">'Warna Warni dalam Emosi'</h2>
                 <h3 id="gradient-layer__subtitle">First Homemade Soap Festival</h2>
+                <div id="gradient-layer__event">
                 <h3 id="gradient-layer__place">KURVA Center Assembly</h3>
                 <h3 id="gradient-layer__date">24.11.23</h3>
+                </div>
             </div>
             <div id="gradient-guests" class="region">
-                <p>Guests Listing</p>
+                <p id="guest-listing__header">Guests Listing</p>
                 <div class="grouped-lists">
                 <div class="guest-lists">
+                <h2 class="class-stage">MAIN STAGE</h2>
                 <div class="guest__item">
                     <P>OUR GUEST STAR<p>
                     <p id="guest-vvip" class="guest-item__artist">Lavender</p>
@@ -63,6 +66,7 @@ tags:
                 </div>
                 </div>
                 <div class="guest-lists">
+                <h2 class="class-stage">LOUNGE STAGE</h2>
                 <div class="guest__item">
                     <p id="guest-vvip" class="guest-item__artist">Lemon</p>
                     <p class="guest-item__pos">Friday, 16.00 - 17.00</p>
