--- a/src/scss/blocks/_pill.scss
+++ b/src/scss/blocks/_pill.scss
@@ -9,4 +9,6 @@
     color: black;
     cursor: pointer;
     appearance: none;
+    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+    font-size: 14px;
 }
