--- a/src/scss/feeds/gradient-soap-motion.scss
+++ b/src/scss/feeds/gradient-soap-motion.scss
@@ -165,6 +165,11 @@
     .grouped-lists {
         display: flex;
     }
+
+    .class-stage {
+        font-size: 20px;
+        font-family: 'Adieu', Segoe UI,system-ui,-apple-system,sans-serif;
+    }
     
     p {
         @include apply-utility('font', 'mono');
