--- a/src/scss/pages/_homepage.scss
+++ b/src/scss/pages/_homepage.scss
@@ -9,14 +9,14 @@
     // background-color: black;
     border-top: 1px solid black;
     margin-left: 1rem;
-    @include apply-utility('font', 'mono');
+    font-family: SFMono-Regular, Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
 
     .region {
         --region-space: #{get-space('size-1')};
     }
 
     h1 {
-        font-size: 1.8rem;
+        // font-size: 1.8rem;
     }
 }
 
@@ -59,6 +59,10 @@
 .heading__section {
     
     h1 {
-        @include apply-utility('font', 'serif');
+        font-family: SFMono-Regular, Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+    }
+
+    p {
+        font-size: 14px;
     }
 }
