--- a/src/site/content/feeds/gradient-soap-motion.njk
+++ b/src/site/content/feeds/gradient-soap-motion.njk
@@ -1,6 +1,7 @@
 ---
 layout: 'layouts/base'
-title: 'Warna Warni dalam Emosi' Festival Poster
+title: Warna Warni dalam Emosi Festival Poster
+cover: "https://assets.kurva.xyz/warna-warni-dalam-emosi2.jpg"
 styleScripts:
     - /css/gradient-soap-motion.css
 tags:
