--- a/src/scss/feeds/gallery-lookbook.scss
+++ b/src/scss/feeds/gallery-lookbook.scss
@@ -17,8 +17,12 @@
 }
 
 .gallery-item {
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     cursor: pointer;
+
+    &:hover {
+        border: 1px solid black;
+    }
 }
