--- a/src/site/content/feeds/gallery-lookbook.njk
+++ b/src/site/content/feeds/gallery-lookbook.njk
@@ -3,10 +3,10 @@ layout: 'layouts/base'
 title: Gallery Lookbook
 cover: "https://assets.kurva.xyz/fresh-lemon-store.png"
 pageScripts:
-    - '/js/experiments-page.js'
+    - '/js/lookbook.js'
 styleScripts:
     - /css/gallery-lookbook.css
-tags: 
+tags:
     - feeds
     - flex
     - intermediate
@@ -14,16 +14,15 @@ tags:
 ---
 
 <div class="gallery-component cluster region wrapper">
-    <div class="detail-image">
-        <img src="/images/feeds/bape-incover-90s.JPG" />
-    </div>
+    <look-book source="/images/feeds/bape-90s-lookbook.jpg" class="detail-image">
+    </look-book>
     <div id="gallery-items" class="detail-grid cluster">
-            <img class="gallery-item" src="https://64.media.tumblr.com/a809404229d8a4df15f1fed16ec78fe5/3d5390d72812f96d-28/s500x750/a4e8d0f3f01bd0bf04707fc62e728b675ce5b9ab.png" />
-            <img class="gallery-item" src="https://64.media.tumblr.com/a809404229d8a4df15f1fed16ec78fe5/3d5390d72812f96d-28/s500x750/a4e8d0f3f01bd0bf04707fc62e728b675ce5b9ab.png" />
-            <img class="gallery-item" src="https://64.media.tumblr.com/a809404229d8a4df15f1fed16ec78fe5/3d5390d72812f96d-28/s500x750/a4e8d0f3f01bd0bf04707fc62e728b675ce5b9ab.png" />
-            <img class="gallery-item" src="https://64.media.tumblr.com/a809404229d8a4df15f1fed16ec78fe5/3d5390d72812f96d-28/s500x750/a4e8d0f3f01bd0bf04707fc62e728b675ce5b9ab.png" />
-            <img class="gallery-item" src="https://64.media.tumblr.com/a809404229d8a4df15f1fed16ec78fe5/3d5390d72812f96d-28/s500x750/a4e8d0f3f01bd0bf04707fc62e728b675ce5b9ab.png" />
-            <img class="gallery-item" src="https://64.media.tumblr.com/a809404229d8a4df15f1fed16ec78fe5/3d5390d72812f96d-28/s500x750/a4e8d0f3f01bd0bf04707fc62e728b675ce5b9ab.png" />
+            <look-item source="https://64.media.tumblr.com/a809404229d8a4df15f1fed16ec78fe5/3d5390d72812f96d-28/s500x750/a4e8d0f3f01bd0bf04707fc62e728b675ce5b9ab.png"></look-item>
+            <look-item source="https://64.media.tumblr.com/cebf19508751de93b542c4cd59729b5d/8de6953917c9a946-a2/s1280x1920/a6635bc6c1f92152290238a3e0c0ac3f744c5806.jpg"></look-item>
+            <look-item source="https://64.media.tumblr.com/b59cade24b97f8501ffaeae2129064fa/8de6953917c9a946-45/s1280x1920/efc047e55a1178eeab4a553c099d8775c2e678f3.jpg"></look-item>
+            <look-item source="https://64.media.tumblr.com/e91a4679016f2c729f12b5cc7945d03c/d9f00e037f8a5385-62/s1280x1920/24dfab0007514242b84e36a5752f1b232667a01c.jpg"></look-item>
+            <look-item source="https://64.media.tumblr.com/a809404229d8a4df15f1fed16ec78fe5/3d5390d72812f96d-28/s500x750/a4e8d0f3f01bd0bf04707fc62e728b675ce5b9ab.png"></look-item>
+            <look-item source="/images/feeds/bape-90s-lookbook.jpg"></source>
     </div>
 </div>
 
