--- a/src/site/content/feeds/gallery-lookbook.njk
+++ b/src/site/content/feeds/gallery-lookbook.njk
@@ -14,14 +14,15 @@ tags:
 
 
 <div class="gallery-component cluster region wrapper">
-    <look-book source="/images/feeds/bape-90s-lookbook.jpg" class="detail-image">
+    {% set firstItem = lookbook.gallerys | first %}
+    <look-book source="{{ firstItem.src }}" class="detail-image">
     </look-book>
     <div id="grid-right" class="detail-grid">
         <div class="cluster">
         <div class="button-left">
         {% include "arrow--left.svg" %}
         </div>
-        <p>1 of {{ lookbook.gallerys | length }}</p>
+        <p id="indicator">1 of {{ lookbook.gallerys | length }}</p>
         <div class="button-right">
         {% include "arrow--right.svg" %}
         </div>
