--- a/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
+++ b/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
@@ -13,13 +13,28 @@ tags:
 <div id="sentimen-page">
     <div id="sentimen__bg-img">
         <img id="landscape-img" src="/images/feeds/sentimen-vibe-morning.JPG" />
+
         <div id="sentimen__headline">
-            <div id="sentimen__inner-text">
-            <h2 id="sentimen__question">Apa yang merindukanmu di pagi hari?</h2>
-            <h1 id="sentimen__quote">Merindukan sentimen di samping kamu</h1>
-            <p id="sentimen__sponsor">Kata kata ini disponsori oleh KICIKKU</p>
-            <p>木シック</p>
-            </div>
+
+                <div id="sentimen__inner-text">
+                    <div class="sentimen--section">
+                        <div class="orange-badge">
+                            <h2 id="badge-text">FREE MORNING</h2>
+                        </div>
+                        <div class="orange-badge">
+                            <h2 id="badge-text">VOUCHER AVAILABLE</h2>
+                        </div>
+                    </div>
+                     <h2 id="sentimen__question">Apa yang merindukanmu di pagi hari?</h2>
+                    <h1 id="sentimen__quote">Merindukan sentimen di samping kamu</h1>
+                    <p id="sentimen__sponsor">Kata kata ini disponsori oleh KICIKKU</p>
+                    <p id="japan__type">木シック</p>
+                </div>
+        </div>
+        <div id="sentimen__foot">
+            <p>KURVA PRODUCTION ALL RIGHT ESTABLISHED WITHIN YEAR FOR ONLY GRAPHIC DESIGN PURPOSE</p>
+            <p>THE TEXT, VISUAL, STYLES AND ELEMENTS ARE EXPERIMENTS ONLY AND FICTITIOUS</p>
+            <p>ANYTHING THAT COMMERCIAL IS NOT INTENDED FOR COMMERCIALS</p>
         </div>
     </div>
 </div>
