added roles into poster and get smaller

--- a/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
+++ b/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
@@ -15,11 +15,10 @@ tags:
         <img id="landscape-img" src="/images/feeds/sentimen-vibe-morning.JPG" />
 
         <div id="sentimen__headline">
-
                 <div id="sentimen__inner-text">
                     <div class="sentimen--section">
                         <div class="orange-badge">
-                            <h2 id="badge-text">FREE MORNING</h2>
+                            <h2 id="badge-text">FREE MORNING SNACK</h2>
                         </div>
                         <div class="orange-badge">
                             <h2 id="badge-text">VOUCHER AVAILABLE</h2>
@@ -27,14 +26,41 @@ tags:
                     </div>
                      <h2 id="sentimen__question">Apa yang merindukanmu di pagi hari?</h2>
                     <h1 id="sentimen__quote">Merindukan sentimen di samping kamu</h1>
-                    <p id="sentimen__sponsor">Kata kata ini disponsori oleh KICIKKU</p>
-                    <p id="japan__type">木シック</p>
+                    <div id="sentimen__group">
+                        <p>A KICIKKU POSTER - "Miss the sentiment beside"</p>
+                        <p id="sentimen__sponsor">Kata kata ini disponsori oleh KICIKKU</p>
+                        <p id="japan__type">木シック</p>
+                    </div>
                 </div>
         </div>
         <div id="sentimen__foot">
+            <div id="roles-items">
+                <a href="/feeds/sentimen-rindu-pagi-hari.njk">
+                    <p class="role-sentimen">PRODUCTION</p>
+                    <p>KICIKKU</p>
+                </a>
+                <a href="/feeds/sentimen-rindu-pagi-hari.njk">
+                    <p class="role-sentimen">GRAPHICS</p>
+                    <p>KICIKKU</p>
+                </a>
+                <a href="/feeds/sentimen-rindu-pagi-hari.njk">
+                    <p class="role-sentimen">POSTER</p>
+                    <p>KICIKKU</p>
+                </a>
+                <a href="/feeds/sentimen-rindu-pagi-hari.njk">
+                    <p class="role-sentimen">DESIGN</p>
+                    <p>KICIKKU</p>
+                </a>
+            </div>
+            <div id="sentimen__trademark">
             <p>KURVA PRODUCTION ALL RIGHT ESTABLISHED WITHIN YEAR FOR ONLY GRAPHIC DESIGN PURPOSE</p>
             <p>THE TEXT, VISUAL, STYLES AND ELEMENTS ARE EXPERIMENTS ONLY AND FICTITIOUS</p>
             <p>ANYTHING THAT COMMERCIAL IS NOT INTENDED FOR COMMERCIALS</p>
+            </div>
+            <div id="sentimen__prop">
+            <p>80% DOMINANT ORANGE. 60% RED FLAVOR</p>
+            <p>ORANGE TRADEMARK ONLY PICK WITHIN THE COLOR</p>
+            </div>
         </div>
     </div>
 </div>
