--- a/src/scss/feeds/sentimen-pagi.scss
+++ b/src/scss/feeds/sentimen-pagi.scss
@@ -1,7 +1,8 @@
 @import '../bases';
 
 #sentimen-page {
-
+    background-color: black;
+    padding: 2em;
 }
 
 .orange-badge {
@@ -12,10 +13,11 @@
     padding: 2em;
 
     #badge-text {
-        font-size: 24px;
+        font-size: 20px;
         text-align: center;
         text-shadow: unset;
         // @include apply-utility('font', 'serif');
+        text-shadow: -1px 0 black,0 1px black,1px 0 black,0 -1px black;
     }
 }
 
@@ -43,7 +45,6 @@
     height: 100%;
 
     display: flex;
-    // justify-content: space-around;
     padding: 3em;
     flex-direction: column;
     -webkit-box-pack: center;
@@ -53,13 +54,14 @@
 
 #sentimen__inner-text {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     // padding: 8em;
     flex-direction: column;
     -webkit-box-pack: center;
     align-items: center;
     height: 450px;
     text-align: center;
+    gap: 2em;
 
     h1, h2, p {
         color: white;
@@ -67,6 +69,7 @@
         @include apply-utility('font', 'serif');
         text-shadow: -1px 0 black,0 1px black,1px 0 black,0 -1px black;
         font-weight: 700;
+        line-height: 1;
     }
 }
 
@@ -77,13 +80,54 @@
 #sentimen__quote {
     font-size: clamp(40px, 60px, 80px);
     font-weight: 400;
+    line-height: 1.2em;
+}
+
+#sentimen__group {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+#japan__type {
+    font-size: 81px;
 }
 
 #sentimen__foot {
     background-color: rgb(222, 65, 9);
-    min-height: 320px;
+    min-height: 260px;
     min-width: 1000px;
     width: 100%;
     padding: 2vh;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    justify-content: center;
+    color: white;
+}
+
+#roles-items {
+    display: flex;
+    justify-content: space-around;
+
+    a {
+        display: flex;
+        gap: 1em;
+        align-items: flex-end;
+        cursor: pointer;
+
+        &:hover {
+            color: white;
+            background-color: black;
+        }
+    }
+
+    .role-sentimen {
+        font-size: 14px;
+    }
+}
+
+#sentimen__trademark, #sentimen__prop {
+    font-size: 12px;
 }
