draft for open order poster

--- a/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
+++ b/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
@@ -23,6 +23,9 @@ tags:
                         <div class="orange-badge">
                             <h2 id="badge-text">VOUCHER AVAILABLE</h2>
                         </div>
+                        <div class="orange-badge">
+                            <h2 id="badge-text">INDONESIAN ONLY</h2>
+                        </div>
                     </div>
                      <h2 id="sentimen__question">Apa yang merindukanmu di pagi hari?</h2>
                     <h1 id="sentimen__quote">Merindukan sentimen di samping kamu</h1>
