--- a/src/site/_includes/partials/site-footer.njk
+++ b/src/site/_includes/partials/site-footer.njk
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li>
-                    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Us on Ko-fi', '#29abe0', 'T6T6D9A93');kofiwidget2.draw();</script> 
+                    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#2847e0', 'T6T6D9A93');kofiwidget2.draw();</script> 
                 </li>
                 <li>
                     <a href="/"
@@ -48,7 +48,7 @@
     <nav class="site-footer__brand-nav">
         <ul class="cluster" role="list">
             <li>
-                <h3>© 2022 Kurva (BETA) by KICIKKU. Images for material contents are the respective owners</h3>
+                <p>© 2022 Kurva (BETA) by KICIKKU. Images for material contents are the respective owners</p>
             </li>
             <li>
                 <a href="/privacy-policy">
