--- a/src/site/content/feeds/kicikku-open-order.njk
+++ b/src/site/content/feeds/kicikku-open-order.njk
@@ -14,22 +14,46 @@ tags:
 <div id="openorder-page">
     <div id="first-poster">
         <img class="wrapper" src="/images/feeds/kicikku-openorder.jpg" />
-        <h1 id="openorder-title">OPEN ORDER NOW</h1>
+        <h1 class="openorder-title">OPEN ORDER NOW</h1>
         <div id="openorder-company">
             <p>VISUAL DESIGN STUDIO COMPANY. ESTABLISHED 2021</p>
-            <h1>KICIKKU-WebServiceCompany</h1>
+            <h1>KICIKKU-Service Company</h1>
             <h2>FOR VC SERVICE</h2>
             <h2>@KICIKKU</h2>
         </div>
     </div>
     <div id="second-poster">
-        <img class="wrapper" src="/images/feeds/kicikku-openorder.jpg" />
-        <h1>OPEN ORDER NOW</h1>
-        <div>
-            <p>SHOP VINTAGE STUDIO COMPANY. ESTABLISHED 2021</p>
-            <h1>KICIKKU-WebServiceCompany</h1>
-            <h2>FOR VC SERVICE</h2>
-            <h2>@KICIKKU</h2>
+        <img class="wrapper" src="/images/feeds/opening-hours-fish.jpg" />
+        <h1 class="hours-title">OPENING HOURS</h1>
+        <div id="hours-company">
+            <div class="left-hour-item">
+            <h2>MONDAY</h2>
+            <p>09:45 - 16:30</p>
+            </div>
+            <div class="right-hour-item">
+            <h2>TUESDAY</h2>
+            <p>09:45 - 16:30</p>
+            </div>
+            <div class="left-hour-item">
+            <h2>WEDNESDAY</h2>
+            <p>09:45 - 16:30</p>
+            </div>
+            <div class="right-hour-item">
+            <h2>THURSDAY</h2>
+            <p>09:45 - 16:30</p>
+            </div>
+            <div>
+            <h2>FRIDAY</h2>
+            <p>09:45 - 16:30</p>
+            </div>
+            <div>
+            <h2>SATURDAY</h2>
+            <p>09:45 - 16:30</p>
+            </div>
+            <div>
+            <h2>SUNDAY</h2>
+            <p>09:45 - 16:30</p>
+            </div>
         </div>
     </div>
 </div>
