--- a/src/scss/feeds/kicikku-openorder.scss
+++ b/src/scss/feeds/kicikku-openorder.scss
@@ -56,15 +56,31 @@
 #openorder-company {
     background-color: black;
     padding: 1em;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+
+    #trademark--kurva {
+        text-align: right;
+    }
 }
 
 #openorder-company, #hours-company {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: absolute;    
+    z-index: 2;
+}
+
+#openorder-company {
+    bottom: 2em;
+    left: 2em;
+}
+
+#hours-company {
     bottom: 10em;
     left: 3em;
-    z-index: 2;
 }
 
 #openorder-company p, #hours-company p {
@@ -77,9 +93,9 @@
     font-size: 32px;
 }
 
-#openorder-company h2 {
+#openorder-company h3 {
     color: white;
-    font-size: 24px;
+    // font-size: 24px;
     font-weight: 400;
 }
 
