--- a/src/site/content/feeds/kicikku-open-order.njk
+++ b/src/site/content/feeds/kicikku-open-order.njk
@@ -14,12 +14,17 @@ tags:
 <div id="openorder-page">
     <div id="first-poster">
         <img class="wrapper" src="/images/feeds/kicikku-openorder.jpg" />
+        <div class="openorder-heading">
         <h1 class="openorder-title">OPEN ORDER NOW</h1>
+        </div>
         <div id="openorder-company">
+            <div>
             <p>VISUAL DESIGN STUDIO COMPANY. ESTABLISHED 2021</p>
-            <h1>KICIKKU-Service Company</h1>
-            <h2>FOR VC SERVICE</h2>
-            <h2>@KICIKKU</h2>
+            <h1>KICIKKU-SERVICE COMPANY</h1>
+            <h3>For VC Service</h3>
+            <h3>@KICIKKU</h3>
+            </div>
+            <p id="trademark--kurva">ALL RIGHT RESERVED. KURVA DIGITAL POSTER</p>
         </div>
     </div>
     <div id="second-poster">
