--- a/src/site/content/feeds/kicikku-open-order.njk
+++ b/src/site/content/feeds/kicikku-open-order.njk
@@ -7,7 +7,7 @@ draft: true
 tags: 
     - feeds
     - flex
-    - basic
+    - intermediate
     - in-progress
 ---
 
@@ -15,7 +15,8 @@ tags:
     <div id="first-poster">
         <img class="wrapper" src="/images/feeds/kicikku-openorder.jpg" />
         <div class="openorder-heading">
-        <h1 class="openorder-title">OPEN ORDER NOW</h1>
+            <div id="open-circle"></div>
+            <h1 class="openorder-title">OPEN ORDER NOW</h1>
         </div>
         <div id="openorder-company">
             <div>
@@ -47,17 +48,17 @@ tags:
             <h2>THURSDAY</h2>
             <p>09:45 - 16:30</p>
             </div>
-            <div>
+            <div class="left-hour-item">
             <h2>FRIDAY</h2>
             <p>09:45 - 16:30</p>
             </div>
-            <div>
+            <div class="right-hour-item">
             <h2>SATURDAY</h2>
             <p>09:45 - 16:30</p>
             </div>
-            <div>
+            <div class="left-hour-item">
             <h2>SUNDAY</h2>
-            <p>09:45 - 16:30</p>
+            <p>CLOSED</p>
             </div>
         </div>
     </div>
