--- a/src/site/content/feeds/kicikku-open-order.njk
+++ b/src/site/content/feeds/kicikku-open-order.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-title: KICIKKU "Open Order Now" Poster
+title: KICIKKU Open Order Now Vintage Poster
 styleScripts:
     - /css/kicikku-openorder.css
 draft: true
